objects/New_Object__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customfeidl1__c</fullName>
        <label>Customfeidl1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customfeidl2__c</fullName>
        <label>Customfeidl2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <label>Drivers License</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLSTest1__c</fullName>
        <label>FLSTest1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLSTest2__c</fullName>
        <label>FLSTest2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldtest1_del__c</fullName>
        <description>testing deleted field</description>
        <inlineHelpText>nothing</inlineHelpText>
        <label>Fieldtest1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IgnoreMissingVisibility__c</fullName>
        <label>IgnoreMissingVisibility</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookUpFieldTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Object</label>
        <referenceTo>New_Object__c</referenceTo>
        <relationshipLabel>New Objects</relationshipLabel>
        <relationshipName>New_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <description>Once vaccines are demonstrated to be safe and efficacious, they must be approved by national regulators, manufactured to exacting standards, and distributed. WHO is working with partners around the world to help coordinate key steps in this process,</description>
        <inlineHelpText>Covid</inlineHelpText>
        <label>Merge</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>TextArea</type>
    </fields>
    <label>New Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>New Obect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VerifyAge</fullName>
        <active>true</active>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <errorConditionFormula>AND(
MailingState__c = &quot;CA&quot;,
NOT(REGEX( Drivers_License__c , &quot;([A-Z]\\d{7})?&quot;))
)</errorConditionFormula>
        <errorDisplayField>Drivers_License__c</errorDisplayField>
        <errorMessage>Invalid California driver&apos;s license format.</errorMessage>
    </validationRules>
</CustomObject>